Fix badge z-index

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -38740,6 +38740,7 @@ LocationBox
   background-color: rgba(0, 0, 0, 0) !important;
   color: rgba(255, 255, 255, 0.61);
   border: 1px solid rgba(255, 255, 255, 0.27) !important;
+  z-index: 0 !important;
 }
 
 /*
